# mecab

mecab/: .gitignore  meson.build  meson_options.txt
mecab/src/: meson.build
