install_headers('mecab.h')

sources = [
  'viterbi.cpp',
  'tagger.cpp',
  'utils.cpp',
  'utils.h',
  'eval.cpp',
  'iconv_utils.cpp',
  'iconv_utils.h',
  'dictionary_rewriter.h',
  'dictionary_rewriter.cpp',
  'dictionary_generator.cpp',
  'dictionary_compiler.cpp',
  'context_id.h',
  'context_id.cpp',
  'winmain.h',
  'thread.h',
  'connector.cpp',
  'nbest_generator.h',
  'nbest_generator.cpp',
  'connector.h',
  'writer.h',
  'writer.cpp',
  'mmap.h',
  'ucs.h',
  'string_buffer.h',
  'string_buffer.cpp',
  'tokenizer.h',
  'stream_wrapper.h',
  'common.h',
  'darts.h',
  'char_property.h',
  'ucstable.h',
  'freelist.h',
  'viterbi.h',
  'param.cpp',
  'tokenizer.cpp',
  'ucstable.h',
  'char_property.cpp',
  'dictionary.h',
  'scoped_ptr.h',
  'param.h',
  'mecab.h',
  'dictionary.cpp',
  'feature_index.cpp',
  'feature_index.h',
  'lbfgs.cpp',
  'lbfgs.h',
  'learner_tagger.cpp',
  'learner_tagger.h',
  'learner.cpp',
  'learner_node.h',
  'libmecab.cpp',
]

mapfile = 'appstream-glib.map'
vflag = '-Wl,--version-script,@0@/@1@'.format(meson.current_source_dir(), mapfile)
mecablib = shared_library(
  'mecab',
  sources,
  install : true,
  include_directories : config_inc,
  dependencies : thread_dep,
)

mecab_dep = declare_dependency(
  include_directories : include_directories('.'),
  link_with : mecablib,
)
